--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header {
 h1 {
     margin-top: 10px;
      
-        font-family:  "Pacifico", cursive;
+        font-family:  "Dancing Script", cursive;
         margin: 2px;
         scroll-behavior: smooth;
         padding-top: 70px;
@@ -26,7 +26,7 @@ h1 {
 
 h2 {
     margin-bottom: 10px;
-        font-family:  "Oswald", sans-serif;
+        font-family:  "'Montserrat', sans-serif";
         margin: 2px;
         scroll-behavior: smooth;
         padding-top: 20px;
@@ -60,14 +60,18 @@ section {
 #acerca-de-mi p {
     text-align: justify;
 }
-#habilidades ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+#habilidades ul li {
+    display: inline-block;
+    text-align: right;
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-right: 10px;
 }
 
 #habilidades ul li {
     display: inline-block;
+    text-align: right;
     padding: 5px;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -143,13 +147,10 @@ section {
 .animacion-titulo {
     animation: aparecer 10s ease-in-out;
 }
-
-@keyframes aparecer {
-    from {
-        opacity: 0.5;
-    }
-
-    to {
-        opacity: 1;
-    }
+footer{ 
+    background-color: aquamarine;
+    color: grey;
+    text-align: center;
+    padding: 20px;
+    margin-bottom:  20px
 }
